Subindo a segunda versão

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Meu nome é William Firmino
-    Este é a primeira versão do meu projeto
+    Este é a segunda versão do meu projeto
 </body>
 </html>
